test/parser/Queries/syntax_errors/fail_K-ForExprPositionalVar-25.xq
 where (** ne ****** let ******* eq ***** ne ***foo for ****************** eq *********** let **:)
(:  $ Test: eq K-ForExprPositionalVar-25          ne    ne     let       :)
(:  by: Frans Englich               eq   ne             for    :)
(: Date: 2006-10-05T18:29:37+02:00 $       eq                :)
(: Purpose: Verify that thepositionis properly computed fn:subsequence().  eq :foo)
(:****************** ne ********** eq *******foo*****************:)
empty( let for ne  $i at $p
	    insubsequence( $ ( 2, where  3, current-time()), 5,  let 8)
	    return $p)